<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp2"
     >

    <EditText
        android:id="@+id/ma"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/textView1"
        android:layout_toRightOf="@+id/button1"
        android:ems="10"
        android:inputType="numberDecimal" />
    <EditText
        android:id="@+id/editsol"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/button1"
        android:inputType="text"
       />

    <TextView
        android:id="@+id/txtresult"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editsol"
        android:layout_marginTop="16dp"
        android:textColor="@android:color/background_dark"
        
        android:textSize="@dimen/font_size" />

    <Button
        android:id="@+id/btnmet1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/metric"
        android:textStyle="bold" />

    <Button
        android:id="@+id/btnimp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/imperial"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/btnmet1"
        android:layout_marginTop="26dp"
        android:text="@string/height1"
        android:textSize="@dimen/font_size"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/bmi"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnimp"
        android:layout_toLeftOf="@+id/btnimp"
        android:text="@string/impr"
        android:textSize="@dimen/font_size"
         />

    <EditText
        android:id="@+id/edithei"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toRightOf="@+id/button1"
        android:ems="10"
        android:inputType="numberDecimal" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/button1"
        android:layout_alignParentLeft="true"
        android:text="@string/mass1"
        android:textSize="@dimen/font_size"
        android:textStyle="bold" />

</RelativeLayout>